@startuml
hide circle
skinparam linetype ortho

entity "User" as user {
  * id : UUID
  --
  * username : string
  * email : string
  * password_hash : string
  * role : enum
  * created_at : datetime
  * updated_at : datetime
}

entity "Template" as template {
  * id : UUID
  --
  * user_id : UUID
  * template_type : enum
  * game_name : string
  * title : string
  * preferred_role : string
  * rank : string
  * language : string
  * schedule : string
  * description : text
  * created_at : datetime
}

entity "Request" as request {
  * id : UUID
  --
  * author_id : UUID
  * template_id : UUID
  * title : string
  * description : text
  * status : enum
  * created_at : datetime
  * updated_at : datetime
}

entity "Response" as response {
  * id : UUID
  --
  * request_id : UUID
  * author_id : UUID
  * message_text : text
  * created_at : datetime
}

entity "Conversation" as conversation {
  * id : UUID
  --
  * first_user_id : UUID
  * second_user_id : UUID
  * created_at : datetime
}

entity "Message" as message {
  * id : UUID
  --
  * conversation_id : UUID
  * author_id : UUID
  * text : text
  * created_at : datetime
}

user ||--o{ template
user ||--o{ request
template ||--o{ request
request ||--o{ response
user ||--o{ response
conversation ||--o{ message
user ||--o{ message
